fix z-index

--- a/vue-side/src/styles/_custom.scss
+++ b/vue-side/src/styles/_custom.scss
@@ -171,7 +171,7 @@ body .v-sidebar-menu .vsm--link_level-1.vsm--link_active{
     color: #aceed6;
 }
 
-
+.ace_gutter{z-index:0;}
 
 .editorImage {
     max-width: 100%;
